added links and nav bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <title>welcome to cooding bootcamp</title>
 </head>
 <body>
-    
+  <header>
+    <nav>
+      <div>
+        <a href="#banner">Banner</a>
+      </div>
+      <div>
+        <a href="contact">Contact</a>
+      </div>
+      <div>
+        <a href=""></a>
+      </div>
+    </nav>
+</header>
+  <main>
+    <section id="banner">
+      <h1></h1>
+      <figure>
+        <img src="" alt="" />
+        <figcaption></figcaption>
+      </figure>
+    </section>
+    <section id="contact">
+      <h2></h2>
+      <form action="">
+        <input type="text">
+        <input type="text">
+        <div>
+          <button></button>
+        </div>
+      </form>
+    </section>
+  </main>
+  <footer></footer>
 </body>
 </html>
