add  page content

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 </header>
   <main>
     <section id="banner">
-      <h1></h1>
+      <h1>Coding Boot_camp</h1>
       <figure>
-        <img src="" alt="" />
-        <figcaption></figcaption>
+        <img src="./assets/images/banner.jpg" alt="people learning code around a laptop" />
+        <figcaption>Happy campers</figcaption>
       </figure>
     </section>
     <section id="contact">
-      <h2></h2>
+      <h2>Contact form</h2>
       <form action="">
-        <input type="text">
-        <input type="text">
+        <input type="text" placeholder="Enter Your Name" />
+        <input type="text" placeholder="Enter your Email" />
         <div>
           <button></button>
         </div>
