--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <input type="text" placeholder="Enter Your Name" />
         <input type="text" placeholder="Enter your Email" />
         <div>
-          <button></button>
+          <button>Send</button>
         </div>
       </form>
     </section>
